examples/invalid/not_declared/simple_var.vbr
chord B {
    b: Sample<B>
}

moderato() {
    b: B <-> B(b)|
    a: B <-> b|
}